# ChangeLog for sys-apps/coreutils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.266 2009/09/13 14:52:56 maekke Exp $

  13 Sep 2009; Markus Meier <maekke@gentoo.org> coreutils-7.4.ebuild:
  arm stable, bug #281699

  03 Sep 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.1.ebuild,
  coreutils-7.2.ebuild, coreutils-7.4.ebuild, coreutils-7.5.ebuild:
  Workaround broken --enable-libcap handling #283589 by Alberto.

  31 Aug 2009; Brent Baude <ranger@gentoo.org> coreutils-7.4.ebuild:
  stable ppc64, bug 281699

  29 Aug 2009; Tobias Klausmann <klausman@gentoo.org> coreutils-7.4.ebuild:
  Stable on alpha, bug #281699

  29 Aug 2009; nixnut <nixnut@gentoo.org> coreutils-7.4.ebuild:
  ppc stable #281699

*coreutils-7.5 (20 Aug 2009)

  20 Aug 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-7.5.ebuild:
  Version bump.

  19 Aug 2009; Jeroen Roovers <jer@gentoo.org> coreutils-7.4.ebuild:
  Stable for HPPA (bug #281699).

  19 Aug 2009; Jeremy Olexa <darkside@gentoo.org> coreutils-7.4.ebuild:
  amd64 stable, all tests passed. bug 281699

  18 Aug 2009; Christian Faulhammer <fauli@gentoo.org> coreutils-7.4.ebuild:
  stable x86, bug 281699

  16 Aug 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.1.ebuild,
  coreutils-7.2.ebuild, coreutils-7.4.ebuild:
  Depend on xz-utils or lzma-utils.

  06 Jul 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.4.ebuild:
  Auto delete /bin/dircolors if it is from early coreutils #224823 by Stefan
  de Konink.

  16 May 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.1.ebuild,
  coreutils-7.2.ebuild, coreutils-7.4.ebuild:
  Allow /dev/loop when running mount #269758 by Nick Fortino.

*coreutils-7.4 (07 May 2009)

  07 May 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-7.4.ebuild:
  Version bump.

  27 Apr 2009; Mike Frysinger <vapier@gentoo.org> coreutils-7.1,
  coreutils-7.2: