@@ -23,8 +23,11 @@ DIST coreutils-7.4-patches-1.tar.lzma 7658 RMD160 b15e0775320e378631fa683301fb31
 DIST coreutils-7.4.tar.gz 9708910 RMD160 a7f53f50154e8473d1d859468c8e02fa85c3c6bb SHA1 cfb399b1d121abde8c1b68b2651a645b7170547f SHA256 613c57d0df3616c2684a1e6a59259439b72dbc5eea4b90ac16bde714fefb7c83
 DIST coreutils-7.5-patches-1.tar.lzma 7591 RMD160 ec69e54b41874c425c40695f5dcbc87f785fe4e0 SHA1 536f93c57cbd2bb51159805e5f6380125f270479 SHA256 f3c7070f4dc40eac391427ddc625f4f9cb0f16b5c065c0d4639d9b6969da748e
 DIST coreutils-7.5.tar.gz 9956013 RMD160 17785526e6820705aa5790454af1bd3d0d4104aa SHA1 97e1486a33bf42eb7686d8f131c80ab533f1f683 SHA256 341f49b9434f83ca9a8b6c2266813092ef08a5fca25f15dcc1a0ba82fc18c3c1
+DIST coreutils-7.6-patches-1.tar.lzma 3948 RMD160 b0c0ff518b571ddca87bffc2ebf0bedfb30c2f42 SHA1 4e74f57e0ba2b8d8a4404f113ae27cd354eb983a SHA256 b0af2257b02da46f58be4254bdbce4212d5f93180f07fa9281a96a8fceee04b0
+DIST coreutils-7.6.tar.gz 10014650 RMD160 8d0741aabfc7bea9adc1e7d71ff36100c4afc3a2 SHA1 98880651bee000b1b31e1ee55ff8fabdad8eeecd SHA256 1d9bfe8b427ca5f8cffa0b462f861e4157c946fbeaf0884d273bbd6cab1c25d4
 EBUILD coreutils-7.2-r00.1.ebuild 5188 RMD160 11c7e02eaa1b3ea13002a61b008d77dcd9043ba7 SHA1 487428c835eda49a5bbcf0e395f42abeb0d5c638 SHA256 e08975e8f572d8bdc79e17a03fde6344b16ce2057c915a71c4d52bb2f90ccab6
 EBUILD coreutils-7.4.ebuild 5566 RMD160 2888a6884157df6f7259d4276f4cfd7ef3faaff8 SHA1 b6416f47dee466b486bb37ceae10aba074d77f88 SHA256 2af126f6c582cef149296772f7decf0cf11bb444ac4dacab2e12b0cee34a4164
 EBUILD coreutils-7.5-r00.1.ebuild 5839 RMD160 e4cb9b06763dc1eeefb0e30cebd276c40f625b61 SHA1 298ccc5f547306d9f62fe6908cc2d71f1f193569 SHA256 d3eb5c4b8c48d2deb3294b9633274299068d0e98bcc4e1a8b99ff9db453c3b6d
-MISC ChangeLog 39537 RMD160 4d2221dbe69ecf534a304e4bf7286e64ecc3d780 SHA1 279c1727d69b3cafe9100b3c00d81654a4853f26 SHA256 72e89d279b2a586eac0bdcbba6c85acdd0890fc35a73ef9f6b2a2c346897cef0
+EBUILD coreutils-7.6.ebuild 5849 RMD160 06bfed031317e195bf8318df167ac0a56a7d6fe5 SHA1 7132a174858d76f96e5fff2eea300a7fd09eec17 SHA256 d1edd4796415bfd87be6acaaba0f85545ca29b89bf2d31ae542564c1ee8e77e9
+MISC ChangeLog 39704 RMD160 ef9687c76de758dac22d69c7245ab5245d675d55 SHA1 51c782b2873286b034fe5eee9c91d31ff7548746 SHA256 ab19fa9a312a41a1bd0b5b553bf13aab53ff14e694350e840e5b01948311c641
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
