@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.266 2009/09/13 14:52:56 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.267 2009/09/23 17:41:32 vapier Exp $
+
+*coreutils-7.6 (23 Sep 2009)
+
+  23 Sep 2009; Mike Frysinger <vapier@gentoo.org> +coreutils-7.6.ebuild:
+  Version bump #284727 by Arfrever Frehtes Taifersar Arahesis.
 
   13 Sep 2009; Markus Meier <maekke@gentoo.org> coreutils-7.4.ebuild:
   arm stable, bug #281699
